--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="8" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="ReservatorApplication">
         <activity android:name=".Reservator"
                   android:label="@string/app_name">
             <intent-filter>
@@ -13,6 +13,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="RoomInfo"></activity>
 
     </application>
 </manifest>
