--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -14,6 +14,7 @@
             </intent-filter>
         </activity>
         <activity android:name="RoomInfo"></activity>
+        <activity android:name="ReserveActivity"></activity>
 
     </application>
 </manifest>
