-Bunch of new resource images -HomeActivity with layout -Improved calendar view look and feel
git-svn-id: file:///srv/svn/repos/futurice_reservator@54 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -15,7 +15,8 @@
             </intent-filter>
         </activity>
         <activity android:name="RoomInfo"></activity>
-        <activity android:name="ReserveActivity"></activity>
+        <activity android:name="SettingsActivity"></activity>
+        <activity android:name="HomeActivity"></activity>
 
     </application>
 </manifest>
