--- a/android/Reservator/.classpath
+++ b/android/Reservator/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry kind="lib" path="lib/simple-xml-2.5.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
