-calendar view popup reservation now refreshes after closing
git-svn-id: file:///srv/svn/repos/futurice_reservator@74 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name="RoomInfo"></activity>
         <activity android:name="SettingsActivity"></activity>
         <activity android:name="HomeActivity"></activity>
+        <activity android:name=".view.RoomReservationPopup" android:theme="@style/Theme.Transparent"></activity>
 
     </application>
 </manifest>
