--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -7,16 +7,16 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="ReservatorApplication">
-        <activity android:name=".Reservator"
+        <activity android:name="LoginActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="RoomInfo"></activity>
+        <activity android:name="RoomActivity"></activity>
         <activity android:name="SettingsActivity"></activity>
-        <activity android:name="HomeActivity"></activity>
+        <activity android:name="LobbyActivity"></activity>
         <activity android:name=".view.RoomReservationPopup" android:theme="@style/Theme.Transparent"></activity>
 
     </application>
