--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="ReservatorApplication">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="ReservatorApplication" android:debuggable="true">
         <activity android:name="LoginActivity"
                   android:label="@string/app_name">
             <intent-filter>
