--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -3,10 +3,11 @@
       package="com.futurice.android.reservator"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="18" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="ReservatorApplication" android:debuggable="true">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" 
+        android:name="ReservatorApplication" android:allowBackup="true" android:debuggable="true">
         <activity android:name="LoginActivity"
                   android:label="@string/app_name">
             <intent-filter>
