vertex draw breaks on android version >= 4, because the hardware acceleration is enabled by default. Disabled it in the manifest, thanks vman!

--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -15,7 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="RoomActivity"></activity>
+        <!-- Hardware acceleration breaks the drawing of the vertices -->
+        <activity android:name="RoomActivity" android:hardwareAccelerated="false"></activity>
         <activity android:name="SettingsActivity" android:theme="@style/Theme.Transparent"></activity>
         <activity android:name="LobbyActivity"></activity>
         <activity android:name=".view.RoomReservationPopup" android:theme="@style/Theme.Transparent"></activity>
