--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.futurice.android.reservator"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionCode="2"
+      android:versionName="2.0">
     <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="18" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" 
-        android:name="ReservatorApplication" android:allowBackup="true" android:debuggable="true">
+        android:name="ReservatorApplication" android:allowBackup="true">
         <activity android:name="LoginActivity"
                   android:label="@string/app_name">
             <intent-filter>
