--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -3,9 +3,14 @@
       package="com.futurice.android.reservator"
       android:versionCode="2"
       android:versionName="2.0">
-    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="18" />
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="18" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_SYNC_STATS" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    
     <application android:icon="@drawable/icon" android:label="@string/app_name" 
         android:name="ReservatorApplication" android:allowBackup="true">
         <activity android:name="LoginActivity"
