--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     
     <application android:icon="@drawable/icon" android:label="@string/app_name" 
         android:name="ReservatorApplication" android:allowBackup="true">
