--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.futurice.android.reservator"
-      android:versionCode="2"
-      android:versionName="2.0">
+      android:versionCode="3"
+      android:versionName="3.0 (Google Apps)">
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="18" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
