--- a/android/Reservator/AndroidManifest.xml
+++ b/android/Reservator/AndroidManifest.xml
@@ -15,6 +15,8 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name" 
         android:name="ReservatorApplication" android:allowBackup="true">
         <activity android:name="LoginActivity"
+			      android:screenOrientation="landscape"
+			      android:configChanges="orientation|screenSize"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,10 +24,17 @@
             </intent-filter>
         </activity>
         <!-- Hardware acceleration breaks the drawing of the vertices -->
-        <activity android:name="RoomActivity" android:hardwareAccelerated="false"></activity>
-        <activity android:name="SettingsActivity" android:theme="@style/Theme.Transparent"></activity>
-        <activity android:name="LobbyActivity"></activity>
-        <activity android:name=".view.RoomReservationPopup" android:theme="@style/Theme.Transparent"></activity>
+        <activity android:name="RoomActivity" 
+			      android:screenOrientation="landscape"
+			      android:configChanges="orientation|screenSize"
+            	  android:hardwareAccelerated="false"></activity>
+        <activity android:name="SettingsActivity" 
+		          android:theme="@style/Theme.Transparent"></activity>
+        <activity android:name="LobbyActivity"
+			      android:screenOrientation="landscape"
+			      android:configChanges="orientation|screenSize"></activity>
+        <activity android:name=".view.RoomReservationPopup"
+            	  android:theme="@style/Theme.Transparent"></activity>
 
     </application>
 </manifest>
