--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name" 
         android:name="ReservatorApplication" android:allowBackup="true">
         <activity android:name="LoginActivity"
-			      android:screenOrientation="landscape"
+			      android:screenOrientation="sensorLandscape"
 			      android:configChanges="orientation|screenSize"
                   android:label="@string/app_name">
             <intent-filter>
@@ -31,19 +31,19 @@
             </intent-filter>
         </activity>
         <activity android:name=".AccountSelection"
-                  android:screenOrientation="landscape"
+                  android:screenOrientation="sensorLandscape"
                   android:configChanges="orientation|screenSize"
                   android:hardwareAccelerated="false">
         </activity>
         <!-- Hardware acceleration breaks the drawing of the vertices -->
         <activity android:name="RoomActivity" 
-			      android:screenOrientation="landscape"
+			      android:screenOrientation="sensorLandscape"
 			      android:configChanges="orientation|screenSize"
             	  android:hardwareAccelerated="false"></activity>
         <activity android:name="SettingsActivity" 
 		          android:theme="@style/Theme.Transparent"></activity>
         <activity android:name="LobbyActivity"
-			      android:screenOrientation="landscape"
+			      android:screenOrientation="sensorLandscape"
 			      android:configChanges="orientation|screenSize"></activity>
         <activity android:name=".view.RoomReservationPopup"
             	  android:theme="@style/Theme.Transparent"></activity>
