--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 17
-    buildToolsVersion "23.0.0 rc2"
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.futurice.android.reservator"
