--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,52 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.futurice.android.reservator"
-      android:versionCode="15"
-      android:versionName="4.1.1">
-    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="18" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_SYNC_STATS" />
-    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
-    <uses-permission android:name="android.permission.READ_CALENDAR" />
-    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    
-    <supports-screens android:smallScreens="false"
+          package="com.futurice.android.reservator"
+          android:versionCode="15"
+          android:versionName="4.1.1">
+
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="18"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_SYNC_STATS"/>
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.READ_CALENDAR"/>
+    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <supports-screens
+        android:smallScreens="false"
         android:normalScreens="false"
         android:largeScreens="true"
         android:xlargeScreens="true"
-        android:requiresSmallestWidthDp="600" />
-    
-    <application android:icon="@drawable/icon" android:label="@string/app_name" 
-        android:name="ReservatorApplication" android:allowBackup="true">
-        <activity android:name="LoginActivity"
-			      android:screenOrientation="sensorLandscape"
-			      android:configChanges="orientation|screenSize"
-                  android:label="@string/app_name">
+        android:requiresSmallestWidthDp="600"/>
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:name="ReservatorApplication"
+        android:allowBackup="true">
+        <activity
+            android:name="LoginActivity"
+            android:screenOrientation="sensorLandscape"
+            android:configChanges="orientation|screenSize"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".AccountSelection"
-                  android:screenOrientation="sensorLandscape"
-                  android:configChanges="orientation|screenSize"
-                  android:hardwareAccelerated="false">
+        <activity
+            android:name=".AccountSelection"
+            android:screenOrientation="sensorLandscape"
+            android:configChanges="orientation|screenSize"
+            android:hardwareAccelerated="false">
         </activity>
         <!-- Hardware acceleration breaks the drawing of the vertices -->
-        <activity android:name="RoomActivity" 
-			      android:screenOrientation="sensorLandscape"
-			      android:configChanges="orientation|screenSize"
-            	  android:hardwareAccelerated="false"></activity>
-        <activity android:name="SettingsActivity" 
-		          android:theme="@style/Theme.Transparent"></activity>
-        <activity android:name="LobbyActivity"
-			      android:screenOrientation="sensorLandscape"
-			      android:configChanges="orientation|screenSize"></activity>
-        <activity android:name=".view.RoomReservationPopup"
-            	  android:theme="@style/Theme.Transparent"></activity>
+        <activity
+            android:name="RoomActivity"
+            android:screenOrientation="sensorLandscape"
+            android:configChanges="orientation|screenSize"
+            android:hardwareAccelerated="false"></activity>
+        <activity
+            android:name="SettingsActivity"
+            android:theme="@style/Theme.Transparent"></activity>
+        <activity
+            android:name="LobbyActivity"
+            android:screenOrientation="sensorLandscape"
+            android:configChanges="orientation|screenSize"></activity>
+        <activity
+            android:name=".view.RoomReservationPopup"
+            android:theme="@style/Theme.Transparent"></activity>
 
     </application>
 </manifest>
