update othe class to show second reservation view
update other class which use the reservation view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,10 @@
         <activity
             android:name=".view.RoomReservationPopup"
             android:theme="@style/Theme.Transparent"></activity>
+        <activity
+            android:name=".ReservationActivity"
+            android:screenOrientation="sensorLandscape"
+            android:configChanges="orientation|screenSize"></activity>
 
     </application>
 </manifest>
