updated gradle and manifest for tests

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,21 +50,27 @@
             android:name="RoomActivity"
             android:screenOrientation="sensorLandscape"
             android:configChanges="orientation|screenSize"
-            android:hardwareAccelerated="false"></activity>
+            android:hardwareAccelerated="false">
+        </activity>
         <activity
             android:name="SettingsActivity"
-            android:theme="@style/Theme.Transparent"></activity>
+            android:theme="@style/Theme.Transparent">
+        </activity>
         <activity
             android:name="LobbyActivity"
             android:screenOrientation="sensorLandscape"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize">
+        </activity>
         <activity
             android:name=".view.RoomReservationPopup"
-            android:theme="@style/Theme.Transparent"></activity>
+            android:theme="@style/Theme.Transparent">
+        </activity>
         <activity
             android:name=".ReservationActivity"
             android:screenOrientation="sensorLandscape"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize">
+        </activity>
 
+        <uses-library android:name="android.test.runner" />
     </application>
 </manifest>
