--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,13 @@ android {
         }
     }
 }
+
 dependencies {
     testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support:support-annotations:24.2.1'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    // Optional -- UI testing with Espresso
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
 
