--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="18"/>
+        android:targetSdkVersion="23"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
@@ -39,12 +39,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name=".AccountSelection"
-            android:screenOrientation="sensorLandscape"
-            android:configChanges="orientation|screenSize"
-            android:hardwareAccelerated="false">
-        </activity>
         <!-- Hardware acceleration breaks the drawing of the vertices -->
         <activity
             android:name="RoomActivity"
@@ -61,6 +55,10 @@
         <activity
             android:name=".view.RoomReservationPopup"
             android:theme="@style/Theme.Transparent"></activity>
+
+        <activity
+            android:name=".WizardActivity"
+            android:theme="@style/Theme.AppCompat"></activity>
 
     </application>
 </manifest>
