--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:name="LoginActivity"
             android:screenOrientation="sensorLandscape"
             android:configChanges="orientation|screenSize"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -44,21 +45,22 @@
             android:name="RoomActivity"
             android:screenOrientation="sensorLandscape"
             android:configChanges="orientation|screenSize"
-            android:hardwareAccelerated="false"></activity>
+            android:hardwareAccelerated="false"/>
         <activity
             android:name="SettingsActivity"
-            android:theme="@style/Theme.Transparent"></activity>
+            android:theme="@style/Theme.Transparent"/>
         <activity
             android:name="LobbyActivity"
             android:screenOrientation="sensorLandscape"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize"/>
         <activity
             android:name=".view.RoomReservationPopup"
-            android:theme="@style/Theme.Transparent"></activity>
+            android:theme="@style/Theme.Transparent"/>
 
         <activity
             android:name=".WizardActivity"
-            android:theme="@style/Theme.AppCompat"></activity>
+            android:theme="@style/Theme.AppCompat"
+            android:noHistory="true"/>
 
     </application>
 </manifest>
