changes for release

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "com.futurice.android.reservator"
+        applicationId "com.synyx.android.reservator"
         minSdkVersion 14
         targetSdkVersion 18
 
@@ -23,7 +23,7 @@ android {
 
 dependencies {
     testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support:support-annotations:25.1.0'
+    androidTestCompile 'com.android.support:support-annotations:25.1.1'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
     // Optional -- UI testing with Espresso
