--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,12 @@ android {
         }
     }
 
+    repositories {
+        mavenCentral()
+    }
+
     dependencies {
+        compile 'com.github.paolorotolo:appintro:4.1.0'
         compile "com.android.support:support-v4:25.3.1"
         compile "com.android.support:appcompat-v7:25.3.1"
     }
