--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,34 +33,34 @@
             android:name="LoginActivity"
             android:screenOrientation="sensorLandscape"
             android:configChanges="orientation|screenSize"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".AccountSelection"
-            android:screenOrientation="sensorLandscape"
-            android:configChanges="orientation|screenSize"
-            android:hardwareAccelerated="false">
         </activity>
         <!-- Hardware acceleration breaks the drawing of the vertices -->
         <activity
             android:name="RoomActivity"
             android:screenOrientation="sensorLandscape"
             android:configChanges="orientation|screenSize"
-            android:hardwareAccelerated="false"></activity>
+            android:hardwareAccelerated="false"/>
         <activity
             android:name="SettingsActivity"
-            android:theme="@style/Theme.Transparent"></activity>
+            android:theme="@style/Theme.Transparent"/>
         <activity
             android:name="LobbyActivity"
             android:screenOrientation="sensorLandscape"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize"/>
         <activity
             android:name=".view.RoomReservationPopup"
-            android:theme="@style/Theme.Transparent"></activity>
+            android:theme="@style/Theme.Transparent"/>
+
+        <activity
+            android:name=".WizardActivity"
+            android:theme="@style/Theme.AppCompat"
+            android:noHistory="true"/>
 
     </application>
 </manifest>
