--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,32 +1,35 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+  compileSdkVersion 25
+  buildToolsVersion '25.0.0'
 
-    defaultConfig {
-        applicationId "com.futurice.android.reservator"
-        minSdkVersion 16
-        targetSdkVersion 25
+  defaultConfig {
+    applicationId "com.futurice.android.reservator"
+    minSdkVersion 16
+    targetSdkVersion 25
 
-        testApplicationId "com.futurice.android.reservator.test"
-        testInstrumentationRunner "android.test.InstrumentationTestRunner"
+    testApplicationId "com.futurice.android.reservator.test"
+    testInstrumentationRunner "android.test.InstrumentationTestRunner"
+  }
+
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
     }
+  }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-        }
-    }
+  repositories {
+    mavenCentral()
+  }
 
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        compile 'com.github.paolorotolo:appintro:4.1.0'
-        compile "com.android.support:support-v4:25.3.1"
-        compile "com.android.support:appcompat-v7:25.3.1"
-    }
+  dependencies {
+    compile 'com.github.paolorotolo:appintro:4.1.0'
+    compile "com.android.support:support-v4:25.3.1"
+    compile "com.android.support:appcompat-v7:25.3.1"
+  }
+}
+dependencies {
+  compile 'com.android.support.constraint:constraint-layout:+'
 }
