--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,66 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.futurice.android.reservator"
-          android:versionCode="17"
-          android:versionName="4.2.1">
+    android:versionCode="17"
+    android:versionName="4.2.1"
+    package="com.futurice.android.reservator">
 
-    <uses-sdk
-        android:minSdkVersion="16"
-        android:targetSdkVersion="25"/>
+  <uses-sdk
+      android:minSdkVersion="16"
+      android:targetSdkVersion="25"/>
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.READ_SYNC_STATS"/>
-    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
-    <uses-permission android:name="android.permission.READ_CALENDAR"/>
-    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+  <uses-permission android:name="android.permission.READ_SYNC_STATS"/>
+  <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+  <uses-permission android:name="android.permission.READ_CALENDAR"/>
+  <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
+  <uses-permission android:name="android.permission.READ_CONTACTS"/>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
-    <supports-screens
-        android:smallScreens="false"
-        android:normalScreens="false"
-        android:largeScreens="true"
-        android:xlargeScreens="true"
-        android:requiresSmallestWidthDp="600"/>
+  <supports-screens
+      android:largeScreens="true"
+      android:normalScreens="false"
+      android:requiresSmallestWidthDp="600"
+      android:smallScreens="false"
+      android:xlargeScreens="true"/>
 
-    <application
-        android:icon="@drawable/icon"
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+  <application
+      android:name=".ReservatorApplication"
+      android:allowBackup="true"
+      android:icon="@drawable/icon"
+      android:label="@string/app_name">
+    <activity
+        android:name=".LoginActivity"
+        android:configChanges="orientation|screenSize"
         android:label="@string/app_name"
-        android:name="ReservatorApplication"
-        android:allowBackup="true">
-        <activity
-            android:name="LoginActivity"
-            android:screenOrientation="sensorLandscape"
-            android:configChanges="orientation|screenSize"
-            android:label="@string/app_name"
-            android:noHistory="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-        <!-- Hardware acceleration breaks the drawing of the vertices -->
-        <activity
-            android:name="RoomActivity"
-            android:screenOrientation="sensorLandscape"
-            android:configChanges="orientation|screenSize"
-            android:hardwareAccelerated="false"/>
-        <activity
-            android:name="SettingsActivity"
-            android:theme="@style/Theme.Transparent"/>
-        <activity
-            android:name="LobbyActivity"
-            android:screenOrientation="sensorLandscape"
-            android:configChanges="orientation|screenSize"/>
-        <activity
-            android:name=".view.RoomReservationPopup"
-            android:theme="@style/Theme.Transparent"/>
+        android:noHistory="true"
+        android:screenOrientation="sensorLandscape">
+    </activity>
+    <!-- Hardware acceleration breaks the drawing of the vertices -->
+    <activity
+        android:name=".RoomActivity"
+        android:configChanges="orientation|screenSize"
+        android:hardwareAccelerated="false"
+        android:screenOrientation="sensorLandscape"/>
+    <activity
+        android:name=".SettingsActivity"
+        android:theme="@style/Theme.Transparent"/>
+    <activity
+        android:name=".LobbyActivity"
+        android:configChanges="orientation|screenSize"
+        android:screenOrientation="sensorLandscape"/>
+    <activity
+        android:name=".view.RoomReservationPopup"
+        android:theme="@style/Theme.Transparent"/>
+    <activity
+        android:name=".WizardActivity"
+        android:noHistory="true"
+        android:theme="@style/Theme.AppCompat"/>
+    <activity
+        android:name=".CheckPermissionsActivity"
+        android:theme="@style/Theme.AppCompat">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
 
-        <activity
-            android:name=".WizardActivity"
-            android:theme="@style/Theme.AppCompat"
-            android:noHistory="true"/>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+  </application>
 
-    </application>
 </manifest>
