Adds .gitignore rules, lint, pmd, findbugs scripts

--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,5 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/gradle,android,androidstudio
+/gradle.properties
+/keystore/reservator_release.keystore
