--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.futurice.android.reservator"
-    android:versionCode="17"
-    android:versionName="4.2.1">
+    package="com.futurice.android.reservator">
 
     <uses-sdk
         android:minSdkVersion="16"
