Add butterknife dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,5 +80,7 @@ android {
         compile "com.github.paolorotolo:appintro:$rootProject.appintroVersion"
         compile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
         compile "com.android.support:appcompat-v7:$rootProject.appCompatVesion"
+        compile "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
+        annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterknifeVersion"
     }
 }
