--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@drawable/icon"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        android:supportsRtl="true">
         <activity
             android:name=".LoginActivity"
             android:configChanges="orientation|screenSize"
