Libraries, SDK and gradle upgrade.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,15 @@ android {
 
     productFlavors {
         dev {
-
+            dimension "dev"
         }
 
         prod {
             signingConfig signingConfigs.release
+            dimension "prod"
         }
     }
+    flavorDimensions "dev", "prod"
 
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES.txt'
