Preparing for release with bugfixes. Moved to percentage widths in layout

--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,5 @@ gradle-app.setting
 # End of https://www.gitignore.io/api/gradle,android,androidstudio
 /gradle.properties
 /keystore/reservator_release.keystore
+
+app/release/
